# Road-Surface-Damage-Recognition-and-Visualization-Based-on-Video-Imagery

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/data/: data.yaml
docs/: RTX5060_环境配置指南.md  SITP_实验报告_YOLOv8s_路面病害识别.md  SITP_模型训练实操指南.md
runs/segment/train/: args.yaml
runs/segment/train2/: args.yaml
runs/segment/train3/: args.yaml
runs/segment/train4/: args.yaml
runs/segment/train5/: args.yaml
runs/segment/train6/: args.yaml
runs/segment/train7/: args.yaml
runs/segment/train8/: args.yaml  results.csv
src/pavement_detect/: __init__.py  app.py  config.py  drawing.py  log.py  model.py  plot_academic.py  report_generator.py  train.py  ui_style.py  utils.py  web.py
